# sandbox

sandbox/coverage/: README.md
sandbox/coverage/include/: coverage.h
sandbox/coverage/src/: patrolling.cpp  voronoi_diagram_generator.cpp
software/coverage/: CMakeLists.txt
software/coverage/src/: coverage.cpp
software/patrolling/: README.md
software/patrolling/include/: utils.h
software/patrolling/src/: voronoi_main.cpp
